# test-project-xyz456

./: .gitignore  34k_p2pk_pubkeys.txt  Cargo.toml  Coder_CPU_Eval.txt  FEATURE_INVENTORY_AND_EXECUTION_FLOW.md  GROK_GPU_list  HYBRID_MODE_MASTER_PLAN.md  New_GROK  Puzzles_run_curt.txt  README.md  SmallOddPrime_Precise_code.rs  V3_Prompt.md  aaaaa  aaaaaa  bbbbb  bbbbbb  bias_analysis.sh  bigint.d  build.rs  build.txt  cargo_check1  cargo_check2  cargo_out1  cargo_out10  cargo_out11  cargo_out2  cargo_out3  cargo_out4  cargo_out5  cargo_out6  cargo_out7  cargo_out8  cargo_out9  cargo_test01  cargo_test02  cargo_test03  cargo_test04  cargo_test05  cargo_test06  cargo_test07  (+79 more)
.cursor/rules/: speedbitcrack-core.mdc
benches/: kangaroo.rs
bias_analyzer/: Cargo.toml
bias_analyzer/src/: main.rs
docs/: nsight_profiling.md  profiling.md
scripts/: commit_phase10.sh  custom_mod_efficiency_rule.py  custom_nsight_rules.py  phase_tracker.sh  profile_and_analyze.sh  profile_rtx3070.sh  quality_check.sh  setup_profiling.sh
src/: DEVELOPMENT_WORKFLOW.md  GROK_Online_Complete_Implementation_Guide.txt  GROK_Online_GLVOptimization_Prompt.txt  GrokNotes  SmallOddPrime_Precise_code.rs  TESTING.md  bloom_fix.rs  build.rs  check_output.txt  checkpoint.rs  checkpoint_fix.rs  cli.rs  closure_end_fix.rs  collision_fix.rs  comment_fix.rs  config.rs  cuda_parity_test.rs  dp_fix.rs  dp_prune_fix.rs  gpu_step_clean.rs  gpu_step_fix.rs  kangaroo_state_fix.rs  kangaroo_type_fix.rs  lib.rs  main.rs  new_complete.rs  new_function_correct.rs  new_function_fix.rs  performance_monitor.rs  puzzles.rs  puzzles.txt  run_full_range_fix.rs  rust-analyzer.toml  security.rs  simple_math_test  simple_new.rs  simple_puzzle_solver.rs  simple_run.rs  simple_step.rs  simple_test.rs  (+16 more)
src/benches/: kangaroo.rs  math.rs
src/dp/: mod.rs  pruning.rs  pruning.rs.backup  table.rs
src/gpu/: backend.rs  hybrid_manager.rs  hybrid_manager.rs.backup  memory.rs  mod.rs  shared.rs  tests.rs
src/gpu/backends/: backend_trait.rs  cpu_backend.rs  cuda_backend.rs  hybrid_backend.rs  mod.rs  vulkan_backend.rs
src/gpu/backends/hybrid/: buffers.rs  cluster.rs  communication.rs  dispatch.rs  dp_integration.rs  execution.rs  execution.rs.backup  load_balancer.rs  mod.rs  monitoring.rs  operations.rs  performance.rs  power.rs  scheduling.rs  topology.rs
src/gpu/backends/vulkan/shaders/: kangaroo_step.wgsl
src/gpu/cuda/: VALIDATION.md  adaptive_tuning.cu  barrett_kernel_optimized.cu  bias_bank_conflict_free.cu  bias_check_kernel.cu  bias_kernel_optimized.cu  bigint_mul.cu  brent_cycle_detection.cu  carry_propagation.ptx  common_constants.h  cooperative_groups.cu  cuda_graphs.cu  custom_fft.ptx  fft_mul.cu  fused_mul_redc.ptx  glv_decomp.cu  gold_cluster.cu  hybrid.cu  inverse.cu  mod.rs  mod27_kernel.cu  mod81_kernel.cu  mod9_kernel.cu  montgomery_ladder.cu  multi_gpu_coordination.cu  near_collision_bsgs.cu  prime_test_kernel.cu  refine_kernel.cu  rho_kernel.cu  rho_kernel_optimized.cu  solve.cu  step.cu  system_optimizations.cu  tensor_cores.cu  texture_jump_kernel.cu  texture_jump_optimized.cu  wnaf_tables.cu
src/gpu/vulkan/: mod.rs  pipeline.rs
src/gpu/vulkan/shaders/: advanced_parallel.wgsl  batch_barrett_reduce.wgsl  batch_bigint_mul.wgsl  batch_inverse.wgsl  batch_solve_collision.wgsl  batch_to_affine.wgsl  bias_operations.wgsl  dp_check.wgsl  fft_compute.wgsl  jump_table.wgsl  kangaroo.wgsl  memory_optimization.wgsl  montgomery_ladder.wgsl  utils.wgsl
src/kangaroo/: collision.rs  config.rs  controller.rs  generator.rs  manager.rs  mod.rs  search_config.rs  stepper.rs  tests.rs
src/math/: bigint.rs  constants.rs  mod.rs  secp.rs  tests.rs
src/parity/: checker.rs  framework.rs  mod.rs
src/scripts/: phase_tracker.sh  pre-commit  profile_and_analyze.sh  quality_check.sh  setup_dev_env.sh
src/src/: bias.d  impl_block.rs
src/src/gpu/: tests.rs
src/src/kangaroo/: manager_temp.rs
src/src/math/: constants.rs
src/src/tests/: gpu_hybrid.rs  mod.rs
src/src/utils/: bias.rs  mod.rs
src/targets/: loader.rs  mod.rs
src/tests/: bias_validation.rs  glv.rs  puzzle.rs
src/utils/: bias.rs  hash.rs  logging.rs  mod.rs  output.rs  pubkey_loader.rs
tests/: bias_validation.rs  config.rs  fuzz_targets.rs  gpu_hybrid.rs  kangaroo.rs  magic9.rs  math.rs  mod.rs  puzzle.rs
