[package]
name = "speedbitcrack"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
# Required Crates
wgpu = { version = "0.20", optional = true }  # Vulkan backend via wgpu
vulkano = { version = "0.34", optional = true }  # Vulkan backend via vulkano
vulkano-shaders = { version = "0.34", optional = true }  # Shader compilation
k256 = { version = "0.13", features = ["arithmetic"] }  # secp256k1 with arithmetic ops
rayon = "1.10"                    # Parallel CPU tasks (pruning, buckets)
tokio = { version = "1", features = ["full"] }  # Async pruning, I/O
clap = { version = "4", features = ["derive"] } # CLI parsing
cuckoofilter = "0.5"              # Bloom + Cuckoo for DP table
log = "0.4"                       # Structured logging
env_logger = "0.11"               # Simple logger setup
anyhow = "1.0"                    # Error handling
hex = "0.4"                       # Pubkey/hex parsing
serde = { version = "1", features = ["derive"] }  # Config serialization if needed
bytemuck = "1.0"                  # Safe casting between byte slices and POD types
bincode = "1.3"                   # Binary serialization for rocksdb
async-trait = "0.1"               # Async traits for GPU backend
rand = "0.8"                      # Random number generation for entropy
sha2 = "0.10"                     # SHA256 for attractor proxy
blake3 = "1.5.0"                  # Fast hash for DP table
statrs = "0.16.0"                 # Stats for bias tests (KS, Chi2)

# Optional / Future
sled = "0.34"                    # Fast embedded database for DP overflow
num-bigint = "0.4.6"
rustacuda = { version = "0.1", optional = true }     # CUDA driver API wrapper
rustacuda_core = { version = "0.1", optional = true } # Core CUDA types
rustacuda_derive = { version = "0.1", optional = true } # Derive macros
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }  # Raw CUDA runtime API for cuFFT
cuda-sys = { version = "0.2.0", optional = true }  # Raw CUDA driver API for advanced operations
libfuzzer-sys = { version = "0.4", optional = true }  # Fuzz testing

[features]
default = []  # Disable CUDA by default to avoid compilation issues
rustacuda = ["dep:rustacuda", "dep:rustacuda_core", "dep:rustacuda_derive", "dep:cuda-sys"]
vulkano = ["dep:vulkano", "dep:vulkano-shaders"]
wgpu = ["dep:wgpu"]
fuzz = ["libfuzzer-sys"]
smoke = []  # Enable smoke test asserts in benchmarks
laptop = []  # Enable laptop optimizations (sm_86, lower resources)

[lints.rust]
# unsafe_code = "deny"  # Disabled for GPU operations (CUDA kernels, Vulkan buffers)

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "thin"  # Changed from true to "thin" (faster, less RAM)
codegen-units = 16  # Parallelize (from 1)
panic = "abort"

[dev-dependencies]
tempfile = "3.0"  # For temporary directories in tests
criterion = { version = "0.5", features = ["html_reports"] }  # Performance benchmarking
proptest = "1.0"   # Property-based testing
tokio-test = "0.4" # Async testing utilities