[package]
name = "speedbitcrack"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
# Required Crates
wgpu = { version = "0.20", optional = true }  # Vulkan backend via wgpu
vulkano = { version = "0.34", optional = true }  # Vulkan backend via vulkano
vulkano-shaders = { version = "0.34", optional = true }  # Shader compilation
k256 = { version = "0.13", features = ["arithmetic"] }  # secp256k1 with arithmetic ops
rayon = "1.10"                    # Parallel CPU tasks (pruning, buckets)
tokio = { version = "1", features = ["full"] }  # Async pruning, I/O
clap = { version = "4", features = ["derive"] } # CLI parsing
cuckoofilter = "0.5"              # Bloom + Cuckoo for DP table
bloomfilter = "1.0"                # Additional bloom filter for DP pre-checks
log = "0.4"                       # Structured logging
env_logger = "0.11"               # Simple logger setup
anyhow = "1.0"                    # Error handling
hex = "0.4"                       # Pubkey/hex parsing
serde = { version = "1", features = ["derive"] }  # Config serialization if needed
serde_json = "1.0"  # JSON parsing for metrics
crossterm = "0.27"  # Terminal control for real-time output
bytemuck = "1.0"                  # Safe casting between byte slices and POD types
zerocopy = "0.8"                  # Safe casting between byte slices and POD types
ndarray = { version = "0.15", features = ["blas"] }  # ML linear regression for predictive optimization
num-traits = "0.2"                # Numeric traits for BigInt parsing
bincode = "1.3"                   # Binary serialization for rocksdb
async-trait = "0.1"               # Async traits for GPU backend
rand = "0.8"                      # Random number generation for entropy
sha2 = "0.10"                     # SHA256 for attractor proxy
blake3 = "1.5.0"                  # Fast hash for DP table
statrs = "0.16.0"                 # Stats for bias tests (KS, Chi2)
crossbeam-deque = "0.8"           # Lock-free work-stealing deques
regex = "1.10"                    # Regular expressions for parsing logs

# Optional / Future
sled = "0.34"                    # Fast embedded database for DP overflow
num-bigint = "0.4.6"
num-integer = "0.1"              # Integer traits for BigUint operations
rustacuda = { version = "0.1", optional = true }     # CUDA driver API wrapper
rustacuda_core = { version = "0.1", optional = true } # Core CUDA types
rustacuda_derive = { version = "0.1", optional = true } # Derive macros
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }  # Raw CUDA runtime API for cuFFT
cuda-sys = { version = "0.2.0", optional = true }  # Raw CUDA driver API for advanced operations
libfuzzer-sys = { version = "0.4", optional = true }  # Fuzz testing
# cudarc = "0.19.2" # Not used, using rustacuda instead

[features]
default = []  # Disable CUDA by default to avoid compilation issues
cuda = ["rustacuda"]  # Enable CUDA via rustacuda feature
rustacuda = ["dep:rustacuda", "dep:rustacuda_core", "dep:rustacuda_derive", "dep:cuda-sys"]
vulkano = ["dep:vulkano", "dep:vulkano-shaders"]
wgpu = ["dep:wgpu"]
hybrid = ["cuda", "wgpu"]  # Enable both CUDA and Vulkan for hybrid tests
fuzz = ["libfuzzer-sys"]
smoke = []  # Enable smoke test asserts in benchmarks
laptop = []  # Enable laptop optimizations (sm_86, lower resources)
portable_simd = []  # Enable portable SIMD operations for CPU acceleration
legacy = []  # Enable legacy modules with potential compatibility issues
phase4 = []  # Enable Phase 4 features and tests
# cudarc = [] # Not used

[build-dependencies]
cc = "1.0"                        # C/CUDA compiler integration
hex = "0.4"                       # Hex parsing for build script
num-bigint = "0.4.6"              # Big integer operations for bias computation

[lints.rust]
# unsafe_code = "deny"  # Disabled for GPU operations (CUDA kernels, Vulkan buffers)

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "thin"  # Changed from true to "thin" (faster, less RAM)
codegen-units = 16  # Parallelize (from 1)
panic = "abort"

[dev-dependencies]
tempfile = "3.0"  # For temporary directories in tests
criterion = { version = "0.5", features = ["html_reports"] }  # Performance benchmarking
proptest = "1.0"   # Property-based testing
tokio-test = "0.4" # Async testing utilities

[[bin]]
name = "bias_analyze"
path = "src/bin/bias_analyze.rs"

[[test]]
name = "magic9"
path = "tests/magic9.rs"
